# cryptotrader

./: .aider.chat.history.md  .aider.input.history  .copilot-summary.md  .coverage  .editorconfig  .env.example  .gitignore  .merge-routing-state.json  .pre-commit-config.yaml  =1.8.0  ARCHITECTURE_MAP.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OOS_ZERO_TRADES_ANALYSIS.md  README.md  ROLLOUT_CHECKLIST.md  SECURITY.md  backtest_comparison.json  backtest_results.json  docker-compose.dev.yml  docker-compose.env.example  docker-compose.yml  execution_orchestrator.py  fee_model_validation_report.md  fee_proof_report.json  merge_routing.py  oos_from_json.json  oos_regime_dataset.json  oos_regime_from_json.json  oos_walk_forward_results.json  phase2_blunt_opinion.md  pyproject.toml  regime_underperformance_report.json  regime_underperformance_results.json  requirements-dev.txt  requirements.txt  (+9 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  mergify.yml
api/: __init__.py  candle_stream.py  main.py
core/: types.py
db/: __init__.py  init_db.py  schema.sql
docs/: AI_AGENT_ROLES.md  AI_BUDGET_GUARDRAILS.md  AI_CONSENSUS_ROUTER_P4.md  API.md  ARCHITECTURE.md  ASSESSMENT_UI.md  DEVELOPMENT.md  DOCKER.md  EXTENDED_INDICATORS_SUMMARY.md  FEATURES.md  FRONTEND.md  GITHUB_APP_SETUP.md  INDICATOR_CORRELATION_ACCEPTANCE.md  MULTI_EXCHANGE.md  OPERATIONS.md  ORCHESTRATION.md  PORTS.md  README.md  RISK_MANAGEMENT.md  ROADMAP_V2.md  TODO.md  (+6 more)
(+646 files in other folders)
